still fixing the border on mobile

--- a/src/assets/styles/home.css
+++ b/src/assets/styles/home.css
@@ -60,7 +60,7 @@ footer {
 
     a {
         width: 90%;
-        border-bottom: 8px solid #003459;
+        border-bottom: 7px solid #003459;
     }
 
     p {
